[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/OldNewspaperTypes.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/death_screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "label"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Retry:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.474074, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.301758, 0.301758, 0.301758, 1, 0.250977, 0.250977, 0.250977, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 500, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 10.0
scale_random = 1.0
color_ramp = SubResource( 6 )

[node name="DeathScreen" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="VBoxContainer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_top = 111.0
margin_right = 1024.0
margin_bottom = 186.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "TENTAR NOVAMENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Label" parent="VBoxContainer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 337.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "MENU"
align = 1
valign = 1

[node name="LabelAnimation" type="AnimationPlayer" parent="."]
anims/label = SubResource( 3 )

[node name="ScreenAnimation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 512, 600 )
amount = 15
lifetime = 7.0
local_coords = false
process_material = SubResource( 7 )
[connection signal="gui_input" from="VBoxContainer/Retry" to="." method="_on_Retry_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Menu" to="." method="_on_Menu_gui_input"]
[connection signal="animation_finished" from="ScreenAnimation" to="." method="_on_ScreenAnimation_animation_finished"]
